tests/machine/x/java/left_join_multi.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsleft_join_multi4139801346/001/LeftJoinMulti.java:53: error: incompatible types: Object cannot be converted to ItemsOrderIdSku
				_res3.add(new ResultItemNameOrderId(o.id, c.name, i));
				                                                  ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


  1| let customers = [
  2|   { id: 1, name: "Alice" },